first version of sidebar desktop

--- a/src/index.scss
+++ b/src/index.scss
@@ -20,3 +20,16 @@ h5 {
     font-weight: 500;
     font-size: 16px;
 }
+
+h6 {
+    font-weight: 600;
+    font-size: 14px;
+}
+
+hr {
+    color: rgba(0, 0, 0, 0.1);
+    border-width: 1px;
+    border-style: solid;
+    margin-left: 16px;
+    margin-right: 16px;
+}
