--- a/src/pages/SidebarDesktop/sidebar-desktop.scss
+++ b/src/pages/SidebarDesktop/sidebar-desktop.scss
@@ -2,4 +2,6 @@
     width: 375px;
     border-right:1px solid rgba(0, 0, 0, 0.1);
     height: 100%;
+    display: flex;
+    flex-direction: column;
 }
