-added messages to chat container -created input component

--- a/src/components/UserComponent/user-component.scss
+++ b/src/components/UserComponent/user-component.scss
@@ -5,3 +5,10 @@
     padding-left: 16px;
     padding-right: 16px;
 }
+
+.message-container {
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+    align-items: flex-start;
+}
