fixed padding on user component

--- a/src/components/UserComponent/user-component.scss
+++ b/src/components/UserComponent/user-component.scss
@@ -2,8 +2,7 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding: 16px;
 }
 
 .message-container {
