--- a/src/components/UserComponent/user-component.scss
+++ b/src/components/UserComponent/user-component.scss
@@ -1,13 +1,18 @@
 .user-component {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding: 16px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 16px;
+}
+
+.user-component-from-user {
+  @extend .user-component;
+  align-self: flex-end;
 }
 
 .message-container {
-    display: flex;
-    flex-direction: column;
-    gap: 3px;
-    align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+  align-items: flex-start;
 }
