--- a/src/components/MessageComponent/message-component.scss
+++ b/src/components/MessageComponent/message-component.scss
@@ -1,11 +1,13 @@
 .message {
   padding: 16px;
   background-color: rgba(111, 225, 153, 0.2);
+  border-radius: 0px 8px 8px 8px;
 }
 
 .message-from-user {
   @extend .message;
   background-color: rgba(125, 18, 190, 0.1);
+  border-radius: 8px, 0px, 8px, 8px;
 }
 
 .timestamp {
