--- a/src/pages/Chat/chat.scss
+++ b/src/pages/Chat/chat.scss
@@ -8,6 +8,14 @@
   width: 100%;
 }
 
+.chat-template {
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
 .chat::-webkit-scrollbar {
   display: none;
 }
