--- a/src/components/TagPopup/tag-popup.scss
+++ b/src/components/TagPopup/tag-popup.scss
@@ -17,4 +17,10 @@
     width: 100%;
     cursor: pointer;
   }
+  @media (max-width: 648px) {
+    border-top-right-radius: 40px;
+    border-top-left-radius: 40px;
+    width: 100%;
+    left: 0;
+  }
 }
