--- a/src/pages/SidebarDesktop/sidebar-desktop.scss
+++ b/src/pages/SidebarDesktop/sidebar-desktop.scss
@@ -1,7 +1,10 @@
 .sidebar {
-    width: 375px;
-    border-right:1px solid rgba(0, 0, 0, 0.1);
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+  width: 375px;
+  border-right: 1px solid rgba(0, 0, 0, 0.1);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  @media (max-width: 648px) {
+    display: none;
+  }
 }
